Add more API descriptions, the NorthwindDbPack,more APIs, and DebugStmt